--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -31,6 +31,7 @@
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html" />
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html" />
 <link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html" />
+<link rel="import" href="../bower_components/iron-localstorage/iron-localstorage.html" />
 
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
