--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -3,5 +3,6 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
-
+<link rel="import" href="../../../../bower_components/iron-localstorage/iron-localstorage.html" />
+<link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
