created a new behavior to manage the grid behavior on multi view pages so that they are align in the middle but move to left to line up with above rows. testing and updates probably required.
implemented behavior on multi-view pages including: su-risk, su-goals, su-care-review.

created account-header element to use in later more styled version of def-account page.

created def-account page to update user account information including: displayName, email, photoURL, and passsword.
  still need to implement account update saves to local storage for user memory

updated guuey-account display to properly show user account information including: photo, displayName, and email. also wrapped display area in href to account page.

created login-recent-user element to use in login page for recent users.

removed console.logs from ad-profile.

updated def-home to use different widths and spacing in multi-view layout.

updated def-login to use styled recent users from local storage.

used test-test page to create def-account page.

updated my-app with guuey-account-display

updated various styles for app-grid-layout behavior.

--- a/src/elements/login-recent-user/login-recent-user.html
+++ b/src/elements/login-recent-user/login-recent-user.html
@@ -1,6 +1,6 @@
 <link rel="import" href="dependencies.html" />
 
-<dom-module is="guuey-account-display">
+<dom-module is="login-recent-user">
 
   <template>
 
@@ -8,15 +8,22 @@
 
       :host{
         display:inline-block;
+        box-sizing:border-box;
         padding:10px;
+        width:100%;
       }
       .accountCard{
         padding:10px;
       }
       .mainRow{
+        width:100%;
         display:flex;
         flex-direction:row;
         align-items:center;
+      }
+      .mainRow:hover{
+        opacity:.7;
+        cursor:pointer;
       }
       .roundedImage{
         width:50px;
@@ -42,22 +49,13 @@
         font-weight:lighter;
         font-size:11px;
       }
-      .secondRow{
-        display:flex;
-        flex-direction:row;
-        align-items:center;
-      }
-      .secondRow *{
-        flex-grow:1;
-      }
       .ref-wrap{
         text-decoration:none;
       }
     </style>
 
-    <a class="ref-wrap" href="/[[home]]/default/def-account">
+      <paper-card elevation="3" class="mainRow">
 
-      <div class="mainRow">
         <img class="roundedImage" src="[[userImage]]" />
         <div class="textCol">
           <p class="mainText">
@@ -68,22 +66,14 @@
           </p>
         </div>
 
-      </div>
-
-    </a>
-
-      <div class="secondRow">
-        <paper-button on-tap="cancel">cancel</paper-button>
-        <paper-button on-tap="logout">logout</paper-button>
-      </div>
-
+      </paper-card>
 
   </template>
 
   <script>
 
     Polymer({
-      is:"guuey-account-display",
+      is:"login-recent-user",
       properties:{
         userImage:{
           type:String
@@ -94,12 +84,6 @@
         userEmail:{
           type:String
         }
-      },
-      cancel:function(){
-        this.fire("cancelLogout");
-      },
-      logout:function(){
-        this.fire("logout");
       }
     });
 
