--- a/src/pages/default/def-home/def-home.html
+++ b/src/pages/default/def-home/def-home.html
@@ -35,7 +35,8 @@
     <style include="app-grid-style">
     :host{
       --app-grid-columns:5;
-      --app-grid-item-height:125%;
+      --app-grid-item-height:110%;
+      --app-grid-gutter:20px;
     }
     .multiBoxContainer{
       margin-top:25px;
@@ -43,8 +44,6 @@
       margin-left:10%;
     }
     .suBox{
-      margin:20px;
-      margin:var(--su-box-margin);
       position:relative;
     }
     .suBoxImage{
