--- a/src/styles/common-styles.html
+++ b/src/styles/common-styles.html
@@ -280,11 +280,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .multiItem{
         height:400px;
-        width:200px
+        flex-basis:300px;
+        min-width:300px;
+        max-width:300px;
+      }
+      .fillerItem{
+        height:400px;
+        flex-basis:300px;
+        min-width:300px;
+        max-width:300px;
       }
       .multiViewCard{
         width:100%;
         padding-top:40px;
+        justify-content:center;
       }
       /* misc */
       .bad{
