--- a/src/behaviors/multi-view-resize-behavior.html
+++ b/src/behaviors/multi-view-resize-behavior.html
@@ -11,28 +11,29 @@
       ],
       screenChange:function(dimensions){
         //available queries= <=767, <=1023, <=1365, <=1919
-        var appGridColumns="4";
+        this.appGridColumns="4";
 
         if(dimensions.base.query767){
 
-          appGridColumns="2";
+          this.appGridColumns="2";
 
         } else if(dimensions.base.query1023){
 
-          appGridColumns="2";
+          this.appGridColumns="2";
 
         } else if(dimensions.base.query1365){
 
-          appGridColumns="3";
+          this.appGridColumns="3";
 
         } else if(dimensions.base.query1919){
 
-          appGridColumns="4";
+          this.appGridColumns="4";
 
         };
         //column style
-        this.customStyle["--app-grid-columns"]=appGridColumns;
-
+        this.customStyle["--app-grid-columns"]=this.appGridColumns;
+        console.log(dimensions.base);
+        console.log("from resize: "+this.appGridColumns);
         this.updateStyles();
       },
     };
