--- a/src/pages/default/def-login/dependencies.html
+++ b/src/pages/default/def-login/dependencies.html
@@ -5,4 +5,7 @@
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../../../../bower_components/iron-localstorage/iron-localstorage.html" />
 <link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
+
+<link rel="import" href="../../../elements/login-recent-user/login-recent-user.html" />
+
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
