--- a/src/pages/admin/ad-payment/dependencies.html
+++ b/src/pages/admin/ad-payment/dependencies.html
@@ -14,10 +14,10 @@
 <link rel="import" href="../../../../bower_components/gold-email-input/gold-email-input.html" />
 <link rel="import" href="../../../../bower_components/gold-phone-input/gold-phone-input.html" />
 <link rel="import" href="../../../../bower_components/gold-zip-input/gold-zip-input.html" />
+<link rel="import" href="../../../../bower_components/iron-ajax/iron-ajax.html" />
 
 <link rel="import" href="../../../elements/admin-header/admin-header.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
-<link rel="import" href="../../../elements/guuey-stripe/guuey-stripe.html" />
 
 <link rel="import" href="../../../behaviors/animations/admin-pages-animation.html" />
 <link rel="import" href="../../../behaviors/admin-resize-behavior.html" />
