--- a/src/pages/default/def-account/dependencies.html
+++ b/src/pages/default/def-account/dependencies.html
@@ -7,6 +7,7 @@
 
 <link rel="import" href="../../../elements/guuey-photo-editor/guuey-photo-editor.html" />
 <link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
+<link rel="import" href="../../../elements/account-header/account-header.html" />
 
 <link rel="import" href="../../../behaviors/animations/default-pages-animation.html" />
 <link rel="import" href="../../../behaviors/default-resize-behavior.html" />
