--- a/src/pages/admin/ad-payment/ad-payment.html
+++ b/src/pages/admin/ad-payment/ad-payment.html
@@ -514,7 +514,7 @@
             planId:e.model.availablePlan.id,
             users:this.userCount,
           };
-          this.$.addPlanCall.url="http://localhost:3000/payments/addplan";
+          this.$.addPlanCall.url="https://glacial-tor-36526.herokuapp.com/payments/addplan";
           this.$.addPlanCall.generateRequest();
         },
         deletePlan:function(e){
@@ -525,14 +525,14 @@
             planId:e.model.plan.plan.id,
             subId:e.model.plan.id
           };
-          this.$.deletePlanCall.url="http://localhost:3000/payments/deleteplan";
+          this.$.deletePlanCall.url="https://glacial-tor-36526.herokuapp.com/payments/deleteplan";
           this.$.deletePlanCall.generateRequest();
         },
         _getCharges:function(){
           this.$.chargesCall.body={
             customerId:this.customer.customerID
           };
-          this.$.chargesCall.url="http://localhost:3000/payments/getcharges";
+          this.$.chargesCall.url="https://glacial-tor-36526.herokuapp.com/payments/getcharges";
           this.$.chargesCall.generateRequest();
         },
         //handle api calls
